--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyYoutube</string>
+    <string name="app_label">MyYouTube</string>
+    <string name="search_hint">Video name</string>
+    <string name="search_title">Search</string>
 </resources>
